# ForgeEngine

./: .gitignore  CMakeLists.txt  README.md  setup.sh
ForgeEngine/: CMakeLists.txt  Config.h  FEPCH.h  ForgeEngine.h
ForgeEngine/Assets/Shaders/: Renderer3D_Wireframe.glsl
ForgeEngine/Core/: Time.h  TimeStep.h
ForgeEngine/Core/Application/: Application.cpp  Application.h  EntryPoint.h  UUID.cpp  UUID.h
ForgeEngine/Core/Assert/: Assert.h
ForgeEngine/Core/Camera/: Camera.h  Camera3D.cpp  Camera3D.h  Camera3DController.cpp  Camera3DController.h
ForgeEngine/Core/Debug/: Instrumentor.h
ForgeEngine/Core/Event/: Event.h  KeyEvent.h  MouseEvent.h  WindowApplicationEvent.h
ForgeEngine/Core/Imgui/: ImguiLayer.cpp  ImguiLayer.h
ForgeEngine/Core/Input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
ForgeEngine/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
ForgeEngine/Core/Log/: Felog.cpp  Felog.h
ForgeEngine/Core/Renderer/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  InstancedRenderer.cpp  InstancedRenderer.h  Material.h  Mesh.cpp  Mesh.h  RenderCommand.cpp  RenderCommand.h  Renderer.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  TestMesh.cpp  TestMesh.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
ForgeEngine/Core/Scene/: Components.h  SceneCamera.cpp  SceneCamera.h
ForgeEngine/Core/UI/: MainUI.cpp  MainUI.h
ForgeEngine/Core/UI/Editor/: MainUI.cpp
ForgeEngine/Core/UI/Editor/Frames/: Console.cpp  Console.h  FpsInspector.h
ForgeEngine/Core/UI/Frames/: Console.cpp  FpsInspector.cpp  FpsInspector.h
ForgeEngine/Core/Window/: GenericGLFWWindow.cpp  GenericGLFWWindow.h  Window.cpp  Window.h
ForgeEngine/Platform/Generic/: GenericInput.cpp
ForgeEngine/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Nidavellir/: CMakeLists.txt  Nidavellir.cpp  NidavellirLayer.cpp  NidavellirLayer.h
Nidavellir/Assets/Shaders/: Renderer3D_Mesh.glsl  Renderer3D_Wireframe.glsl
WalnutApp/: PhysicsTest.cpp  PhysicsTest.h  imgui.ini
WalnutApp/src/: WalnutApp.cpp
cmake/: FirstRunSetup.cmake
